--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "cleanUrls": false,
   "trailingSlash": false,
   "rewrites": [
+    { "source": "/kb", "destination": "/kb.html" },
     { "source": "/calculator", "destination": "/casevault-calculator-redesigned.html" },
     { "source": "/dashboard", "destination": "/casevault-dashboard-redesigned.html" },
     { "source": "/intake", "destination": "/casevault-intake.html" },
